css/style.css
@import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=IBM+Plex+Mono&family=IBM+Plex+Sans&family=Noto+Sans:wght@300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;700&display=swap');

:root {
    --body-bg-color: #212121;
    --navbar-text-color: #a4c2f4;
    --h-font: "Rajdhani", sans-serif;
    --p-font: "IBM Plex Serif", sans-serif;
}

body {
    background-color: var(--body-bg-color);
    font-family: var(--p-font);
}

h1 {
    text-transform: uppercase;
    text-align: center;
    font-family: var(--h-font);
    font-size: 50pt;
    color: #4a86e8;
}

nav {
    font-family: var(--h-font);
    font-weight: bold;
    color: var(--navbar-text-color);
    font-size: 27pt;
    overflow: hidden;
    text-align: center;
}

nav a {
    color: var(--navbar-text-color);
    text-decoration: none;
}

nav a:hover {
    text-decoration: underline;
}

/* footer {
    border-top: ;
} */

.resourcestext {
    color: white;
    font-family: var(--h-font);
    text-align: center;
    font-size: 18pt;
    line-height: 1.5;
    padding-bottom: 1%;

}

.resourceimg {
    float: right;
    width: 500px;
    height: 700px;
    display: block;
    margin-right: 4%;
}

.handbook {
    text-decoration: none;
}

.handbook:hover {
    text-decoration: underline;
}

.firstwebhyper {
    color: blue;
    text-decoration: none;
    font-size: 35px;
    text-align: center;
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding-bottom: 1%;
}

.firstwebhyper:hover {
    text-decoration: underline;
}

.firstlogo {
    width: 41%;
    height: 41%;
    display: block;
    margin: auto;
}


.aboutheaders {
    text-transform: uppercase;
    text-align: center;
    font-family: var(--h-font);
    font-size: 43pt;
    font-weight: lighter;
    color: #ffffff;
}

.aboutboxes {
    text-align: center;
    font-family: var(--h-font);
    font-size: 38pt;
    font-weight: lighter;
    color: #000;
    background-color: #c9daf8ff;
}

/* Image Slideshow starts here*/
.slider {
    position: relative;
    overflow: hidden;
    height: 750px;

    background-color: #ddd;
    justify-content: center;
  }
  
  .slides {
    display: flex;
    position: relative;
    height: 750px;
    transition: transform 0.5s;
  }
  
  .slide {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 100%;
    transition: opacity 0.5s;
  }
  
  .slide img {
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
  
  .slide.active {
    opacity: 1;
    position: relative;
  }
  
  .dots {
    position: absolute;
    bottom: 20px;
    width: 100%;
    display: flex;
    justify-content: center;
  }
  
  .dot {
    cursor: pointer;
    height: 15px;
    width: 15px;
    margin: 0 10px;
    border-radius: 50%;
    background-color: #bbb;
    transition: background-color 0.6s ease;
  }
  
  .active, .dot:hover {
    background-color: #717171;
  }
  
  .prev, .next {
    cursor: pointer;
    position: absolute;
    top: 60%;
    width: auto;
    padding: 16px;
    margin-top: -22px;
    color: white;
    font-weight: bold;
    font-size: 18px;
    transition: 0.6s ease;
    border-radius: 0 3px 3px 0;
    user-select: none;

  }
  
  .next {
    right: 0;
    border-radius: 3px 0 0 3px;
  }
  
  .prev:hover, .next:hover {
    background-color: rgba(0, 0, 0, 0.8);
  }
  
/* Image Slideshow ends here */

